code-samples/example-08-storage/ex08b-pvc/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ex08b-service
spec:
  selector:
    app: ex08b-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
